--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 .phpunit.result.cache
 ###< phpunit/phpunit ###
 /docker/mysql_data
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
