--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
+_symfony_logout:
+    resource: security.route_loader.logout
+    type: service
+
 controllers:
     resource: ../src/Controller/
     type: attribute
