--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
             logout:
                 path: /logout
 
+    role_hierarchy:
+        ROLE_ADMIN: [ ROLE_STOREKEEPER, ROLE_PAYMASTER ]
+
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: ROLE_USER }
