--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "knplabs/knp-paginator-bundle": "^6.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.22",
+        "stof/doctrine-extensions-bundle": "^1.13",
         "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/doctrine-messenger": "7.2.*",
